full front commit
100% front

--- a/templates/App/sections/galerie.html
+++ b/templates/App/sections/galerie.html
@@ -29,7 +29,7 @@
 		<figure class="mix work-item dec17">
 			<img src="assets/img/2017-2018/dec17/01.jpg" alt="Sevenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="dec17" title="Sevenne" href="assets/img/2017-2018/dec17/01.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<a class="fancybox" rel="dec17" title="Enfin la !" href="assets/img/2017-2018/dec17/01.jpg"><i class="fa fa-eye fa-lg"></i></a>
 				<h4>Premières minutes</h4>
 				<p>Décembre 2017</p>
 			</figcaption>
@@ -38,8 +38,8 @@
 		<figure class="mix work-item jan18">
 			<img src="assets/img/2017-2018/jan18/01.jpg" alt="Sevenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="jan18" title="Titre pour image" href="assets/img/2017-2018/jan18/01.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="jan18" title="Quality time" href="assets/img/2017-2018/jan18/01.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Unies pour la vie</h4>
 				<p>Janvier 2018</p>
 			</figcaption>
 		</figure>
@@ -47,26 +47,26 @@
 		<figure class="mix work-item fev18">
 			<img src="assets/img/2017-2018/fev18/01.jpg" alt="Sevenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="fev18" title="Danseuse" href="assets/img/2017-2018/fev18/01.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="fev18" title="Rêveries" href="assets/img/2017-2018/fev18/01.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Doux moment</h4>
 				<p>Février 2018</p>
 			</figcaption>
 		</figure>
 
 		<figure class="mix work-item dec17">
-			<img src="assets/img/2017-2018/dec17/02.jpg" alt="Sevenne dans les ras">
+			<img src="assets/img/2017-2018/dec17/02.jpg" alt="Sevenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="dec17" title="avec papa" href="assets/img/2017-2018/dec17/02.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Dans les bras de Papa</h4>
+				<a class="fancybox" rel="dec17" title="Où suis-je ?" href="assets/img/2017-2018/dec17/02.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Dans les bras de mon Papa</h4>
 				<p>Décembre 2017</p>
 			</figcaption>
 		</figure>
 
 		<figure class="mix work-item dec17">
-			<img src="assets/img/2017-2018/dec17/03.jpg" alt="">
+			<img src="assets/img/2017-2018/dec17/03.jpg" alt="Sevenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="dec17" title="Titre de l'image" href="assets/img/2017-2018/dec17/03.jpg"><i class="fa fa-eye fa-lg"></i></a>D
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="dec17" title="Bien se couvrir" href="assets/img/2017-2018/dec17/03.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Premiers jours</h4>
 				<p>Décembre 2017</p>
 			</figcaption>
 		</figure>
@@ -74,17 +74,17 @@
 		<figure class="mix work-item jan18">
 			<img src="assets/img/2017-2018/jan18/02.jpg" alt="">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="jan18" title="Titre de l'image" href="assets/img/2017-2018/jan18/02.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="jan18" title="Quality time" href="assets/img/2017-2018/jan18/02.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Avec ma Maman</h4>
 				<p>Janvier 2018</p>
 			</figcaption>
 		</figure>
 
 		<figure class="mix work-item fev18">
-			<img src="assets/img/2017-2018/fev18/02.jpg" alt="">
+			<img src="assets/img/2017-2018/fev18/02.jpg" alt="Sevenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="fev18" title="Titre de l'image" href="assets/img/2017-2018/fev18/02.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="fev18" title="Sky is the limit" href="assets/img/2017-2018/fev18/02.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Regard au loin</h4>
 				<p>Février 2018</p>
 			</figcaption>
 		</figure>
@@ -92,8 +92,8 @@
 		<figure class="mix work-item dec17">
 			<img src="assets/img/2017-2018/dec17/04.jpg" alt="">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="dec17" title="Titre de l'image" href="assets/img/2017-2018/dec17/04.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="dec17" title="Un repos mérité" href="assets/img/2017-2018/dec17/04.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Première nuit</h4>
 				<p>Décembre 2017</p>
 			</figcaption>
 		</figure>
@@ -101,72 +101,72 @@
 		<figure class="mix work-item dec17">
 			<img src="assets/img/2017-2018/dec17/05.jpg" alt="">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="dec17" title="Titre de l'image" href="assets/img/2017-2018/dec17/05.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="dec17" title="Dans mes rêves" href="assets/img/2017-2018/dec17/05.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Première nuit</h4>
 				<p>Décembre 2017</p>
 			</figcaption>
 		</figure>
 
 		<figure class="mix work-item jan18">
-			<img src="assets/img/2017-2018/jan18/03.jpg" alt="">
+			<img src="assets/img/2017-2018/jan18/03.jpg" alt="Sevenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="jan18" title="Titre de l'image" href="assets/img/2017-2018/jan18/03.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="jan18" title="On n'est pas bien ?" href="assets/img/2017-2018/jan18/03.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Le ventre plein</h4>
 				<p>Janvier 2018</p>
 			</figcaption>
 		</figure>
 
 		<figure class="mix work-item fev18">
-			<img src="assets/img/2017-2018/fev18/03.jpg" alt="">
+			<img src="assets/img/2017-2018/fev18/03.jpg" alt="Sevenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="fev18" title="Titre de l'image" href="assets/img/2017-2018/fev18/03.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="fev18" title="Bébé fatal" href="assets/img/2017-2018/fev18/03.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Attention à vos coeurs</h4>
 				<p>Février 2018</p>
 			</figcaption>
 		</figure>
 		
 		<figure class="mix work-item dec17">
-			<img src="assets/img/2017-2018/dec17/06.jpg" alt="">
+			<img src="assets/img/2017-2018/dec17/06.jpg" alt="Sevenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="dec17" title="Titre de l'image" href="assets/img/2017-2018/dec17/06.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="dec17" title="Bien au chaud" href="assets/img/2017-2018/dec17/06.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Un nid de douceur</h4>
 				<p>Décembre 2017</p>
 			</figcaption>
 		</figure>
 		
 		<figure class="mix work-item jan18">
-			<img src="assets/img/2017-2018/jan18/04.jpg" alt="Sound">
+			<img src="assets/img/2017-2018/jan18/04.jpg" alt="Sévenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="dec17" title="Titre de l'image" href="assets/img/2017-2018/jan18/04.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="dec17" title="No picture" href="assets/img/2017-2018/jan18/04.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Caprice de star ?</h4>
 				<p>Décembre 2017</p>
 			</figcaption>
 		</figure>
 
 	
 		<figure class="mix work-item fev18">
-			<img src="assets/img/2017-2018/fev18/04.jpg" alt="">
+			<img src="assets/img/2017-2018/fev18/04.jpg" alt="Sévenne">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="fev18" title="Titre de l'image" href="assets/img/2017-2018/fev18/04.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="fev18" title="Déja vu" href="assets/img/2017-2018/fev18/04.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>L'air de rien</h4>
 				<p>Février 2018</p>
 			</figcaption>
 		</figure>
 		
 		<figure class="mix work-item jan18">
-			<img src="assets/img/2017-2018/jan18/06.jpg" alt="Sound">
+			<img src="assets/img/2017-2018/jan18/06.jpg" alt="Svn">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="dec17" title="Titre de l'image" href="assets/img/2017-2018/jan18/06.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="dec17" title="Pandi panda" href="assets/img/2017-2018/jan18/06.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Chantal Goya ou Desiigner ?</h4>
 				<p>Décembre 2017</p>
 			</figcaption>
 		</figure>
 		
 		<figure class="mix work-item dec17">
-			<img src="assets/img/2017-2018/dec17/07.jpg" alt="">
+			<img src="assets/img/2017-2018/dec17/07.jpg" alt="Svn">
 			<figcaption class="overlay">
-				<a class="fancybox" rel="dec17" title="Titre de l'image" href="assets/img/2017-2018/dec17/07.jpg"><i class="fa fa-eye fa-lg"></i></a>
-				<h4>Texte de description conseillé</h4>
+				<a class="fancybox" rel="dec17" title="Sourire" href="assets/img/2017-2018/dec17/07.jpg"><i class="fa fa-eye fa-lg"></i></a>
+				<h4>Joie de vivre</h4>
 				<p>Décembre 2017</p>
 			</figcaption>
 		</figure>
