--- a/templates/App/sections/merci.html
+++ b/templates/App/sections/merci.html
@@ -36,7 +36,7 @@
 					
 				</p><br/>
 				<p> Je vous dis à très vite</p><br/>
-				<h1 id="signature" >Sévenne</h1>
+				<h1 id="signature" >Sévenne</h1><span><em>"Parce que Périgord ça m'allait moins bien"</em></span>
 			</div>
 
 		</div>
