--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -59,6 +59,7 @@ h4, h5, h6 {
 	font-weight: bold;
 	margin: 0;
 	font-size: 1.2em;
+	 font-family: 'Leckerli One', cursive;
 }
 
 .clear:before,
@@ -285,62 +286,56 @@ top: -8px;
 
 
 /*=========================================
-	Features
+	Post-it
 ==========================================*/
 
-.features {
+.postit {
+  line-height: 1;
+  text-align:center;     
+  width: 275px;    
+  margin: 25px 50px;    
+  min-height:200px;
+  max-height:200px;
+  padding-top:35px;
+  position:relative;   
+  border:1px solid #E8E8E8;  
+  border-top:60px solid #fdfd86;
+  font-family:'Roboto';    
+  font-size:22px;      
+  border-bottom-right-radius: 60px 5px;
+  display:inline-block;    
+   background: #ffff88; /* Old browsers */
+background: -moz-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right bottom, color-stop(81%,#ffff88), color-stop(82%,#ffff88), color-stop(82%,#ffff88), color-stop(100%,#ffffc6)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* IE10+ */
+background: linear-gradient(135deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', endColorstr='#ffffc6',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
  
+.postit:after {     
+   content: "";
+  position:absolute;
+  z-index:-1;
+  right:-0px; bottom:20px;
+  width:200px;
+  height: 25px;
+  background: rgba(0, 0, 0, 0.2);
+  box-shadow:2px 15px 5px rgba(0, 0, 0, 0.40);
+-moz-transform: matrix(-1, -0.1, 0, 1, 0, 0);
+ -webkit-transform: matrix(-1, -0.1, 0, 1, 0, 0);
+      -o-transform: matrix(-1, -0.1, 0, 1, 0, 0);
+     -ms-transform: matrix(-1, -0.1, 0, 1, 0, 0);
+         transform: matrix(-1, -0.1, 0, 1, 0, 0);
 }
 
-.owl-controls {
-  bottom: -45px;
-  margin-top: 10px;
-  position: relative;
-  text-align: center;
+.postit-content{
+	margin-top: -25%;
 }
-
-.owl-controls .owl-page {
-  display: inline-block;
+.messages-wall{
+	background-image: url('../img/brickwall.svg')
 }
-
-.owl-controls .owl-page span {
-  border: 1px solid #C7CED3;
-  border-radius: 20px;
-  display: block;
-  height: 8px;
-  margin: 5px 4px;
-  width: 8px;
-}
-
-.owl-controls .owl-page.active span {
-  background: #062033;
-  border: 0;
-}
-
-.service-icon {
-  border: 1px solid #493a2f;
-  border-radius: 50%;
-  color: #493a2f;
-  float: left;
-  padding: 10px 13px;
-}
-
-.service-desc {
-  margin-left: 70px;
-  position: relative;
-  top: 5px;
-}
-
-.service-desc h3 {
-  color: #062033;
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 25px;
-}
-
-
-
-
 /*=========================================
 	Our Works
 ==========================================*/
@@ -570,9 +565,9 @@ top: -8px;
 }
 
 .contact-form .input-field {
-  width: 48%;
+  width: 35%;
   float: left;
-  margin-right: 4%;
+  margin-right: 12%;
 }
 
 .contact-form .input-field:last-child {
