--- a/public/assets/css/media-queries.css
+++ b/public/assets/css/media-queries.css
@@ -122,13 +122,28 @@ background-position: center top !important;
 ==============================================================*/
 
 @media only screen and (max-width: 767px) {
-
+	
+	body{
+		
+	}
+	#slider{
+		background-image: url('../img/slider/mini2.jpg');
+		background-attachment:fixed;
+		background-repeat:no-repeat;
+	}
+	#carousel-example-generic{
+		display: none;
+	}
+	section#merci.team{
+		padding-top: 0;
+	}
+	.audio-control{
+		margin: 100% 0 0 10%;
+	}
 .sec-sub-title p {
   font-size: 14px;
 }
-	#brand-name{
-		display: none;
-	}
+	
 
 /* slider */
 .carousel-caption h2 {
