--- a/templates/App/sections/contact.html
+++ b/templates/App/sections/contact.html
@@ -9,14 +9,13 @@
 			</div>
 
 			<div class="sec-sub-title text-center wow rubberBand animated" data-wow-duration="1000ms">
-				<p>Laissez moi un commentaire de votre visite !</p><br/>
+				<p>Laissez moi un petit mots !</p><br/>
 			</div>
 
 
 			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 wow fadeInLeft animated" data-wow-duration="500ms">
 				<div class="contact-address">
 					<h3 class="roboto"> Si vous avez des questions, vous pouvez également me contacter par <a href="mailto:iam7vn@gmail.com"> email.</a> </h3>
-					
 					
 				</div>
 			</div>
