--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
 		<title>{% block title %}IamSvn{% endblock %}</title>
 		<meta name="description" content="Private website" />
 		<meta name="keywords" content="Private content" />
+		<link rel="shortcut icon" href="favicon.png">
 		<meta name="author" content="Lift" />
         <title></title>
         {% block stylesheets %}{% endblock %}
